[ey] stop for the night. Added in video gallery for covers and vlog challenge

--- a/Photography-CL-master/css/main.css
+++ b/Photography-CL-master/css/main.css
@@ -80,6 +80,8 @@ a {
 }
 
 iframe {
+  overflow: scroll;
+  z-index: 0;
   border: 0;
 }
 
@@ -1952,7 +1954,7 @@ nav a:hover {
 }
 
 .section-gap {
-  padding: 120px 0;
+  padding: 60px 0;
 }
 
 .section-title {
@@ -2619,3 +2621,31 @@ h6 {
 .what-ive-done-area {
   background-color: #222;
 }
+
+.wrapper { 
+  margin: auto; 
+  text-align: center; 
+  position: relative;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin-bottom: 20px !important;
+  width: 800px;
+  padding-top: 5px;
+}
+.scrolls { 
+  overflow-x: scroll;
+  overflow-y: hidden;
+  height: 80px;
+  white-space:nowrap
+} 
+.imageDiv img { 
+  box-shadow: 1px 1px 10px #999; 
+  margin: 2px;
+  max-height: 50px;
+  cursor: pointer;
+  display:inline-block;
+  *display:inline;
+  *zoom:1;
+  vertical-align:top;
+} 
